// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListActions /> spec List actions renders component when disabled 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
    style="margin-right: 16px;"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft"
      id="actionsPopover"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButton euiButton--primary euiButton-isDisabled"
          data-test-subj="listActionsButton"
          disabled=""
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButton__content"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonContent__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
            <span
              class="euiButton__text"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ListActions /> spec List actions renders component when enabled 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
    style="margin-right: 16px;"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft"
      id="actionsPopover"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButton euiButton--primary"
          data-test-subj="listActionsButton"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonContent--iconRight euiButton__content"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonContent__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                fill-rule="non-zero"
              />
            </svg>
            <span
              class="euiButton__text"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
